@@ -1,3 +1,4 @@
+- Fix deadlock while handling some tcl events		TODO: much more (stress-)testing, backport? (r2649)
 - Plugin dialogs close automatically after submitting (by default)
 - Fetching object structure is much faster for very large data.frames
 - Fix crash when loading certain packages on Windows
@@ -5,7 +6,7 @@
 - "Analysis" menu was restructured, slightly
 - Debug output (previously sent to stderr) is now written to a temporary file
 - On plugin help pages, display a link to invoke the plugin
-- Tolerate missing libraries in testing framework	TODO: - Encourage running 'make plugintests' after install in all relevant places
+- Tolerate missing libraries in testing framework
 - Double-clicking an item in the workspace browser now opens an object viewer, or (if possible) editor
 - Safeguard against removal of essential packages via the GUI
 - Add context menu action to unload packages in the workspace browser window
